src/loader/loader_dri3_helper.c
@@ -70,10 +70,8 @@ dri3_update_num_back(struct loader_dri3_drawable *draw)
 {
    if (draw->flipping)
       draw->num_back = 3;
-   else if (draw->vtable->get_swap_interval(draw) != 0)
-      draw->num_back = 2;
    else
-      draw->num_back = 1;
+      draw->num_back = 2;
 }
 
 void
